fix: h4 adding letter spacing

--- a/css/accumulus.css
+++ b/css/accumulus.css
@@ -931,6 +931,10 @@ video {
   top: 1rem;
 }
 
+.-z-\[1\] {
+  z-index: -1;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -945,14 +949,6 @@ video {
 
 .z-\[999\] {
   z-index: 999;
-}
-
-.-z-0 {
-  z-index: 0;
-}
-
-.-z-\[1\] {
-  z-index: -1;
 }
 
 .order-none {
@@ -1652,10 +1648,6 @@ video {
   background-image: url('/wp-content/themes/accumulus-website/images/regulator-forum/bg-increase-feedback-mobile.png');
 }
 
-.bg-main-platform-mobile {
-  background-image: url('/wp-content/themes/accumulus-website/images/platform/bg-main-platform-mobile.png');
-}
-
 .bg-news-banner-mobile {
   background-image: url('/wp-content/themes/accumulus-website/images/news/bg-news-mobile.webp');
 }
@@ -2009,14 +2001,14 @@ video {
 .text-h4 {
   font-size: 1rem;
   line-height: 120%;
-  letter-spacing: 20%;
+  letter-spacing: 0.25rem;
   font-weight: 500;
 }
 
 .text-h4Mobile {
   font-size: 1rem;
   line-height: 120%;
-  letter-spacing: 20%;
+  letter-spacing: 0.25rem;
   font-weight: 500;
 }
 
@@ -2300,7 +2292,7 @@ video {
 .heading-4 {
   font-size: 1rem;
   line-height: 120%;
-  letter-spacing: 20%;
+  letter-spacing: 0.25rem;
   font-weight: 500;
 }
 
@@ -2308,7 +2300,7 @@ video {
   .heading-4 {
     font-size: 1.125rem;
     line-height: 120%;
-    letter-spacing: 20%;
+    letter-spacing: 0.25rem;
     font-weight: 500;
   }
 }
@@ -2317,7 +2309,7 @@ video {
   .heading-4 {
     font-size: 1rem;
     line-height: 120%;
-    letter-spacing: 20%;
+    letter-spacing: 0.25rem;
     font-weight: 500;
   }
 }
@@ -3020,10 +3012,6 @@ a {
     max-width: 380px;
   }
 
-  .max-lg\:max-w-\[80\%\] {
-    max-width: 80%;
-  }
-
   .max-lg\:max-w-\[75\%\] {
     max-width: 75%;
   }
@@ -3347,10 +3335,6 @@ a {
     background-image: url('/wp-content/themes/accumulus-website/images/get-started-section/bg-block-get-started-tablet.png');
   }
 
-  .md\:bg-main-platform-tablet {
-    background-image: url('/wp-content/themes/accumulus-website/images/platform/bg-main-platform-tablet.png');
-  }
-
   .md\:bg-news-banner-tablet {
     background-image: url('/wp-content/themes/accumulus-website/images/news/bg-news-tablet.webp');
   }
@@ -3542,7 +3526,7 @@ a {
   .md\:text-h4Tablet {
     font-size: 1.125rem;
     line-height: 120%;
-    letter-spacing: 20%;
+    letter-spacing: 0.25rem;
     font-weight: 500;
   }
 
@@ -3868,10 +3852,6 @@ a {
     background-image: url('/wp-content/themes/accumulus-website/images/get-started-section/bg-block-get-started-web.png');
   }
 
-  .lg\:bg-main-platform-desktop {
-    background-image: url('/wp-content/themes/accumulus-website/images/platform/bg-main-platform-desktop.png');
-  }
-
   .lg\:bg-news-banner-desktop {
     background-image: url('/wp-content/themes/accumulus-website/images/news/bg-news-desktop.webp');
   }
@@ -4053,7 +4033,7 @@ a {
   .lg\:text-h4 {
     font-size: 1rem;
     line-height: 120%;
-    letter-spacing: 20%;
+    letter-spacing: 0.25rem;
     font-weight: 500;
   }
 
@@ -4162,7 +4142,7 @@ a {
 .\[\&\>h4\]\:text-h4Mobile>h4 {
   font-size: 1rem;
   line-height: 120%;
-  letter-spacing: 20%;
+  letter-spacing: 0.25rem;
   font-weight: 500;
 }
 
@@ -4170,7 +4150,7 @@ a {
   .md\:\[\&\>h4\]\:text-h4Tablet>h4 {
     font-size: 1.125rem;
     line-height: 120%;
-    letter-spacing: 20%;
+    letter-spacing: 0.25rem;
     font-weight: 500;
   }
 }
@@ -4179,7 +4159,7 @@ a {
   .lg\:\[\&\>h4\]\:text-h4>h4 {
     font-size: 1rem;
     line-height: 120%;
-    letter-spacing: 20%;
+    letter-spacing: 0.25rem;
     font-weight: 500;
   }
 }
